--- a/Mapplas/Mapplas/AppCell.xib
+++ b/Mapplas/Mapplas/AppCell.xib
@@ -225,7 +225,7 @@
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIImageView" id="394943840">
+					<object class="IBUIButton" id="1039420688">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{57, 15}, {28, 28}}</string>
@@ -233,12 +233,22 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="856930037"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIHighlightedTitleColor" ref="13728304"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="505602906"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">ic_action_rate.png</string>
 						</object>
+						<reference key="IBUIFontDescription" ref="61708111"/>
+						<reference key="IBUIFont" ref="305713756"/>
 					</object>
 					<object class="IBUILabel" id="813753078">
 						<reference key="NSNextResponder" ref="321150316"/>
@@ -246,7 +256,7 @@
 						<string key="NSFrame">{{50, 41}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="394943840"/>
+						<reference key="NSNextKeyView" ref="1039420688"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -700,12 +710,21 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">rateApp:</string>
+						<string key="label">shareApp:</string>
 						<reference key="source" ref="585306260"/>
 						<reference key="destination" ref="1040147846"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">143</int>
+					<int key="connectionID">145</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">rateApp:</string>
+						<reference key="source" ref="1039420688"/>
+						<reference key="destination" ref="1040147846"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">146</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -756,13 +775,13 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="831203554"/>
 							<reference ref="856930037"/>
-							<reference ref="394943840"/>
 							<reference ref="441129935"/>
 							<reference ref="813753078"/>
 							<reference ref="589030190"/>
 							<reference ref="756325393"/>
 							<reference ref="827822060"/>
 							<reference ref="585306260"/>
+							<reference ref="1039420688"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">App Cell - Pressed</string>
@@ -776,12 +795,6 @@
 						<int key="objectID">27</int>
 						<reference key="object" ref="441129935"/>
 						<reference key="parent" ref="321150316"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">29</int>
-						<reference key="object" ref="394943840"/>
-						<reference key="parent" ref="321150316"/>
-						<string key="objectName">Rate image - x=77</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">26</int>
@@ -884,6 +897,12 @@
 						<reference key="parent" ref="321150316"/>
 						<string key="objectName">Share button</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">144</int>
+						<reference key="object" ref="1039420688"/>
+						<reference key="parent" ref="321150316"/>
+						<string key="objectName">Rate button</string>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -900,11 +919,11 @@
 				<string key="138.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="140.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="142.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="144.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">AppCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -920,7 +939,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">143</int>
+			<int key="maxID">146</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -932,6 +951,7 @@
 						<string key="blockUnblockApp:">id</string>
 						<string key="pinUnpinApp:">id</string>
 						<string key="rateApp:">id</string>
+						<string key="shareApp:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="animate:">
@@ -948,6 +968,10 @@
 						</object>
 						<object class="IBActionInfo" key="rateApp:">
 							<string key="name">rateApp:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="shareApp:">
+							<string key="name">shareApp:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
