--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -136,6 +136,17 @@
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
+			<object class="IBUIView" id="827450626">
+				<reference key="NSNextResponder"/>
+				<int key="NSvFlags">292</int>
+				<array class="NSMutableArray" key="NSSubviews"/>
+				<string key="NSFrameSize">{320, 78}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<reference key="IBUIBackgroundColor" ref="480929129"/>
+				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+			</object>
 			<object class="IBUIView" id="108938310">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
@@ -265,8 +276,11 @@
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 						<float key="IBUIMinimumFontSize">17</float>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<int key="IBUIAutocapitalizationType">1</int>
+							<int key="IBUIReturnKeyType">4</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
+						<int key="IBUIClearButtonMode">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="612067440">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
@@ -299,8 +313,10 @@
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 						<float key="IBUIMinimumFontSize">17</float>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<int key="IBUIReturnKeyType">9</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
+						<int key="IBUIClearButtonMode">1</int>
 						<reference key="IBUIFontDescription" ref="612067440"/>
 						<reference key="IBUIFont" ref="675373544"/>
 					</object>
@@ -515,17 +531,17 @@
 				<float key="IBUISectionHeaderHeight">22</float>
 				<float key="IBUISectionFooterHeight">22</float>
 			</object>
-			<object class="IBUIView" id="521199821">
+			<object class="IBUIView" id="431916062">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIButton" id="707778099">
-						<reference key="NSNextResponder" ref="521199821"/>
+					<object class="IBUIButton" id="230785061">
+						<reference key="NSNextResponder" ref="431916062"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 25}, {135, 48}}</string>
-						<reference key="NSSuperview" ref="521199821"/>
+						<reference key="NSSuperview" ref="431916062"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="681848298"/>
+						<reference key="NSNextKeyView" ref="898462803"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -538,20 +554,20 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="627064658"/>
-						<object class="NSCustomResource" key="IBUINormalImage" id="1065596391">
+						<object class="NSCustomResource" key="IBUINormalImage" id="517932104">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">textarea.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="899243641"/>
 						<reference key="IBUIFont" ref="782508820"/>
 					</object>
-					<object class="IBUILabel" id="681848298">
-						<reference key="NSNextResponder" ref="521199821"/>
+					<object class="IBUILabel" id="898462803">
+						<reference key="NSNextResponder" ref="431916062"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 38}, {104, 21}}</string>
-						<reference key="NSSuperview" ref="521199821"/>
+						<reference key="NSSuperview" ref="431916062"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="151264095"/>
+						<reference key="NSNextKeyView" ref="718741016"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -566,24 +582,24 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="686061688">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="280928778">
 							<int key="type">1</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="711087603">
+						<object class="NSFont" key="IBUIFont" id="74235153">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIButton" id="151264095">
-						<reference key="NSNextResponder" ref="521199821"/>
+					<object class="IBUIButton" id="718741016">
+						<reference key="NSNextResponder" ref="431916062"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{180, 25}, {135, 48}}</string>
-						<reference key="NSSuperview" ref="521199821"/>
+						<reference key="NSSuperview" ref="431916062"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="865201060"/>
+						<reference key="NSNextKeyView" ref="363011863"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -596,15 +612,15 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="627064658"/>
-						<reference key="IBUINormalImage" ref="1065596391"/>
+						<reference key="IBUINormalImage" ref="517932104"/>
 						<reference key="IBUIFontDescription" ref="899243641"/>
 						<reference key="IBUIFont" ref="782508820"/>
 					</object>
-					<object class="IBUILabel" id="865201060">
-						<reference key="NSNextResponder" ref="521199821"/>
+					<object class="IBUILabel" id="363011863">
+						<reference key="NSNextResponder" ref="431916062"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{194, 38}, {106, 21}}</string>
-						<reference key="NSSuperview" ref="521199821"/>
+						<reference key="NSSuperview" ref="431916062"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -620,15 +636,15 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="686061688"/>
-						<reference key="IBUIFont" ref="711087603"/>
+						<reference key="IBUIFontDescription" ref="280928778"/>
+						<reference key="IBUIFont" ref="74235153"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 78}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="707778099"/>
+				<reference key="NSNextKeyView" ref="230785061"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -792,7 +808,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">footerClearButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="707778099"/>
+						<reference key="destination" ref="230785061"/>
 					</object>
 					<int key="connectionID">63</int>
 				</object>
@@ -800,7 +816,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">footerSignOutButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="151264095"/>
+						<reference key="destination" ref="718741016"/>
 					</object>
 					<int key="connectionID">64</int>
 				</object>
@@ -808,7 +824,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">footerView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="521199821"/>
+						<reference key="destination" ref="431916062"/>
 					</object>
 					<int key="connectionID">65</int>
 				</object>
@@ -816,7 +832,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">footerClearButtonLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="681848298"/>
+						<reference key="destination" ref="898462803"/>
 					</object>
 					<int key="connectionID">68</int>
 				</object>
@@ -824,9 +840,42 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">footerSignOutButtonLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="865201060"/>
+						<reference key="destination" ref="363011863"/>
 					</object>
 					<int key="connectionID">69</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">userInfo</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="827450626"/>
+					</object>
+					<int key="connectionID">74</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="1041697428"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">76</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="729496560"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">77</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">userLogin:</string>
+						<reference key="source" ref="819982339"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">75</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1029,39 +1078,46 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">52</int>
-						<reference key="object" ref="521199821"/>
+						<reference key="object" ref="431916062"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="707778099"/>
-							<reference ref="151264095"/>
-							<reference ref="681848298"/>
-							<reference ref="865201060"/>
+							<reference ref="230785061"/>
+							<reference ref="718741016"/>
+							<reference ref="898462803"/>
+							<reference ref="363011863"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Footer buttons</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">61</int>
-						<reference key="object" ref="707778099"/>
-						<reference key="parent" ref="521199821"/>
+						<reference key="object" ref="230785061"/>
+						<reference key="parent" ref="431916062"/>
 						<string key="objectName">Clear button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">62</int>
-						<reference key="object" ref="151264095"/>
-						<reference key="parent" ref="521199821"/>
+						<reference key="object" ref="718741016"/>
+						<reference key="parent" ref="431916062"/>
 						<string key="objectName">Sign-out button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">66</int>
-						<reference key="object" ref="681848298"/>
-						<reference key="parent" ref="521199821"/>
+						<reference key="object" ref="898462803"/>
+						<reference key="parent" ref="431916062"/>
 						<string key="objectName">Clear button label</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">67</int>
-						<reference key="object" ref="865201060"/>
-						<reference key="parent" ref="521199821"/>
+						<reference key="object" ref="363011863"/>
+						<reference key="parent" ref="431916062"/>
 						<string key="objectName">Sign-out button label</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">70</int>
+						<reference key="object" ref="827450626"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="0"/>
+						<string key="objectName">User info</string>
 					</object>
 				</array>
 			</object>
@@ -1096,6 +1152,7 @@
 				<string key="66.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="70.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -1103,7 +1160,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">69</int>
+			<int key="maxID">77</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1112,11 +1169,16 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="userBlockedApps:">id</string>
+						<string key="userLogin:">id</string>
 						<string key="userPinnedApps:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="userBlockedApps:">
 							<string key="name">userBlockedApps:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="userLogin:">
+							<string key="name">userLogin:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="userPinnedApps:">
@@ -1140,10 +1202,11 @@
 						<string key="userImageButton">UIButton</string>
 						<string key="userImageImageView">UIImageView</string>
 						<string key="userImageView">UIView</string>
+						<string key="userInfo">UIView</string>
 						<string key="userInfoPressed">UIView</string>
 						<string key="userInfoPressedButtonOk">UIView</string>
-						<string key="userInfoPressedEmailEditText">UIView</string>
-						<string key="userInfoPressedNameEditText">UIView</string>
+						<string key="userInfoPressedEmailEditText">UITextField</string>
+						<string key="userInfoPressedNameEditText">UITextField</string>
 						<string key="userInfoUnpressed">UIView</string>
 						<string key="userInfoUnpressedEmail">UILabel</string>
 						<string key="userInfoUnpressedName">UILabel</string>
@@ -1210,6 +1273,10 @@
 							<string key="name">userImageView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="userInfo">
+							<string key="name">userInfo</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="userInfoPressed">
 							<string key="name">userInfoPressed</string>
 							<string key="candidateClassName">UIView</string>
@@ -1220,11 +1287,11 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="userInfoPressedEmailEditText">
 							<string key="name">userInfoPressedEmailEditText</string>
-							<string key="candidateClassName">UIView</string>
+							<string key="candidateClassName">UITextField</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="userInfoPressedNameEditText">
 							<string key="name">userInfoPressedNameEditText</string>
-							<string key="candidateClassName">UIView</string>
+							<string key="candidateClassName">UITextField</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="userInfoUnpressed">
 							<string key="name">userInfoUnpressed</string>
